--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
                 <p>Click aqui para começar</p>
             </div>
             <div id="regra">
-                <p>Para cada pergunta, você tem 4 opções de resposta. Mas apenas uma está correta!</p></br>
-                <p>Se você errar a resposta 3 vezes, volta para o início do jogo!</p></br>
-                <div class="entrada" onclick="titulo()">
-                    <p>Clique aqui</p>
-                </div>
+                <p class="texto_1">Parabéns você acertou todas as 20 perguntas! &#x1F600; &#x1F44F;</p></br>
+                <p class= "texto_2">Gostou do jogo?... Estamos desenvolvendo o próximo nível de perguntas, em breve estará disponível!</p></br>
+                <p class="texto_3">Para cada pergunta, você tem 4 opções de resposta. Mas apenas uma está correta!</p></br>
+                <p class="texto_4">Se você errar a resposta 3 vezes, volta para o início do jogo!</p></br>
+                <div class="entrada" onclick="titulo()"><p>Clique aqui</p></div>
+                <div class="inicio" onclick="inicio()"><p>Home</p></div>
             </div>
             <div class="box">
                 <div id="pg"></div>
