--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                 <div id="par_2">
                     <p>Vamos para próxima pergunta! </p>
                 </div>
+                <div id="par_3">
+                    <p>'Até agora você acertou 10 perguntas! &#x1F600; Parabéns, vamos em frente! '</p>
+                </div>
             </div>
 
             <div onclick="inicio()" class="home">Home</div>
