new creator name change
creator name change

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </main>
 
     <footer>
-        <p> &copy; GatewayCloud </p>
+        <p> &copy; Manoel Carvalho </p>
     </footer>
 
     <script src="listaJson.js"></script>
