alterando posionamneto do footer

--- a/index.html
+++ b/index.html
@@ -83,12 +83,17 @@
             </div>
 
             <div onclick="inicio()" class="home">Home</div>
+            <div id="rodape">
+                
+            </div>
+            
         </div>
+        <footer>
+            <p> &copy; Sítio - soluções em sistemas </p>
+        </footer>
     </main>
 
-    <footer>
-        <p> &copy; Manoel Carvalho </p>
-    </footer>
+   
 
     <script src="listaJson.js"></script>
     <script src="script.js"></script>
